--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "next start",
-    "dev": "next"
+    "start": "node server.js",
+    "dev": "node server.js",
+    "build": "next build",
+    "export": "next export",
+    "deploy": "cd out && now --public"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -13,10 +16,12 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "axios": "^0.19.2",
     "next": "^9.4.0",
+    "next-offline": "^5.0.2",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.5",
-    "string_decoder": "^1.3.0"
+    "string_decoder": "^1.3.0",
+    "sw-precache-webpack-plugin": "^1.0.0"
   }
 }
