--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "node server.js",
     "build": "next build",
     "export": "next export",
-    "deploy": "cd out && now --public"
+    "deploy": "cd out && now --public",
+    "heroku-postbuild": "yarn build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
